<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".StudentDelete">


    <EditText
        android:id="@+id/search_branch_stud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_branch_cse_ise_ece"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/search_sem_std"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_sem_1_2_3"
        android:inputType="text"
        android:padding="10dp" />

    <EditText
        android:id="@+id/search_div_stud"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_division_a_b_c"
        android:inputType="text"
        android:padding="10dp" />

    <Button
        android:id="@+id/search_students"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_students" />

    <ListView
        android:id="@+id/show_students"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/student_delete_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/no_students_found"
        android:textColor="@android:color/holo_green_light"
        android:textStyle="italic"
        android:visibility="gone" />
</LinearLayout>