<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".BoardContent1">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/board1_content_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:text="@string/announcement"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/board1_content_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/notes"
            android:textSize="8sp"
            tools:ignore="SmallSp" />

        <Button
            android:id="@+id/board1_content_quizes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/quizzes"
            android:textSize="8sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ListView
            android:id="@+id/board1_content_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <ListView
            android:id="@+id/board2_content_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <ListView
            android:id="@+id/board3_content_list"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:visibility="gone" />

        <TextView
            android:id="@+id/board1_content_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_comments_yet"
            android:textColor="@android:color/holo_green_light"
            android:textSize="20sp"
            android:textStyle="italic"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <Button
            android:id="@+id/board1_content_add_announcement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/make_announcement"
            android:visibility="gone" />

        <Button
            android:id="@+id/board1_content_add_notes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_notes"
            android:visibility="gone" />

        <Button
            android:id="@+id/board1_content_add_quiz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_quiz"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>