<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light"
        tools:ignore="MissingConstraints">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_main_activity"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hi_admin"
                android:textColor="@android:color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="vertical"
            android:padding="10dp">

            <Button
                android:id="@+id/add_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_staff" />

            <Button
                android:id="@+id/add_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_student" />

            <Button
                android:id="@+id/delete_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_staff" />

            <Button
                android:id="@+id/delete_student"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_student" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>